tests/baselines/reference/emitArrowFunctionWhenUsingArguments05(alwaysstrict=true,target=es2015).errors.txt
emitArrowFunctionWhenUsingArguments05.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments05.ts (1 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var a = () => arguments;
    }